# ssimCheck

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  ssimCheck.cpp
output/: source-vf360p-nossim-output.json  source-vf360p-output.json  source-vf720p-nossim-output.json  source-vf720p-output.json  source-vs360p-nossim-output.json  source-vs360p-output.json  source-vs720p-nossim-output.json  source-vs720p-output.json
src/: Makefile  Makefile.am  Makefile.in  ssimCheck.cpp
